@@ -54,7 +54,7 @@ CONFIGUREDscript:
 	cp $(top_srcdir)/etc/configured.sh $(DESTDIR)$(sysconfdir)
 	chmod 0755 $(DESTDIR)$(sysconfdir)/configured.sh
 
-install-data-hook: mkdirSHscripts SHscripts CONFIGUREDscript
+install-data-hook: mkdirSHscripts CONFIGUREDscript SHscripts
 	$(top_srcdir)/substitute $(SED) "export EXTRAE_ONLINE_SOURCES=$(abs_builddir)/extrae_online.sh" "export EXTRAE_ONLINE_SOURCES=$(DESTDIR)$(sysconfdir)/extrae_online.sh" $(VARS_SCRIPT)
 
 uninstall-local:
